<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintTop_toTopOf="@+id/spinner"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView"
            android:layout_width="151dp"
            android:layout_height="48dp"
            android:text="@string/Hello_World"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="398dp"
            android:layout_height="47dp"
            android:layout_marginEnd="16dp"
            android:onClick="onClickUpdate"
            android:text="@string/button"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/send"
            app:layout_constraintEnd_toEndOf="parent" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="262dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:entries="@array/spinneroptions"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/send"
            android:layout_width="160dp"
            android:layout_height="0dp"
            android:layout_marginStart="120dp"
            android:layout_marginBottom="8dp"
            android:onClick="onSendMessage"
            android:text="@string/send"
            app:layout_constraintBottom_toTopOf="@+id/britishLibrary"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/stopClock"
            android:layout_width="163dp"
            android:layout_height="0dp"
            android:onClick="StopClock"
            android:text="@string/stopclock"
            app:layout_constraintBottom_toTopOf="@+id/button2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/britishLibrary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="BritishLibrary"
            android:text="@string/BritishLibrary"
            app:layout_constraintBottom_toTopOf="@+id/stopClock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="408dp"
            android:layout_height="68dp"
            android:layout_marginBottom="328dp"
            android:onClick="Top_level_entry"
            android:text="@string/top_level_entry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.853"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/message_display"
            android:onClick="Messaging"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>